# tfg_code

./: .eslintignore  .eslintrc.json  .gitignore  .parcelrc  Cargo.toml  Makefile  README.md  index.html  package-lock.json  package.json  pyproject.toml  setup.sh  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
assets/: index-BILU-q-M.js  index-BlTzHNlJ.js  index-BojLqSUs.js  index-CRxer3WA.js  index-D6EnP5ns.js  index-DKqxgQL8.js  index-DavAkiae.css  index-HRwIig5c.css  index-QQK5R0vM.js  tfg_wasm_bg-5ZeiJcwG.wasm  tfg_wasm_bg-Ct8ImGRw.wasm  tfg_wasm_bg-ECw5Phi0.wasm  tfg_wasm_bg-XYTnvLNB.wasm
src/: geometry.rs  lib.rs  math.rs
src/validators/: common.rs  mod.rs  rdf.rs  schema.rs  shacl.rs  sparql.rs
static/: index.html
static/css/: style.css
static/js/: index.ts  validator.ts
static/js/validators/: rdf.ts  schema.ts  shacl.ts  sparql.ts  types.ts  utils.ts
